experiments/logsICC/7549.log
/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/7549.c(68): warning #161: unrecognized #pragma
    #pragma scop
            ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/7549.c(71): error: unrecognized OpenMP #pragma
      #pragma omp 
              ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/7549.c(81): error: unrecognized OpenMP #pragma
      #pragma omp 
              ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/7549.c(84): error: unrecognized OpenMP #pragma
        #pragma omp 
                ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/7549.c(91): error: unrecognized OpenMP #pragma
      #pragma omp 
              ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/7549.c(94): error: unrecognized OpenMP #pragma
        #pragma omp 
                ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/7549.c(104): warning #161: unrecognized #pragma
    #pragma endscop
            ^

compilation aborted for /uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/7549.c (code 2)
